# XAI

./: .gitignore  README.md  camera_map.json  convert.py  docker-compose.yml  tmp_start_topics.sh
camera1/: rtsp-simple-server.yml
container/: Dockerfile
container/src/DB_Subscriber/: Dockerfile
container/src/DB_Subscriber/camera_map/: tmp_cm.json
container/src/DB_Subscriber/src/: CMakeLists.txt  main.cpp
container/src/NN_Publisher/: Dockerfile
container/src/NN_Publisher/camera_map/: camera_map.json
container/src/NN_Publisher/src/: CMakeLists.txt  main.cpp  preprocess.hpp
deployment/: README.md  aws_create.sh  installk8s.yaml  kafka-setup.yaml  master_init.sh  zookeeper-setup.yaml
deployment/ansible/: ansible.cfg  install_k8.yaml
deployment/aws/: config.ini  create_instance.sh  install_k8.yaml
deployment/kickstart-kafka/conf/broker/: main.conf
deployment/kickstart-kafka/conf/controller/: main.conf
deployment/kickstart-kafka/kubernetes/persistent-volume/: kafka.yml
deployment/kickstart-kafka/kubernetes/stateful-set/kafka/: broker.yml  controller.yml
deployment/kickstart-kafka/supervisor/conf/: kafka-broker.ini  kafka-controller.ini
deployment/kubernetes/: CronJob.yml  control_plane_init.sh  k8_cluster_reset.sh
deployment/kubernetes/kafka/: create_kafka_cluster.sh  kafka-config-values.yaml  kafka-pv.yml  zookeeper-pv.yml
deployment/kubernetes/kafka-cluster/: cluster_test.sh  create_kafka_cluster.sh  kafka-config-values.yaml  kafka-pv.yml  zookeeper-pv.yml
deployment/kubernetes/kafka-cluster/kafka/: Chart.yaml  README.md
deployment/kubernetes/kafka-cluster/kafka/charts/zookeeper/: README.md
deployment/kubernetes/kafka-cluster/kafka/charts/zookeeper/templates/: NOTES.txt  statefulset.yaml
deployment/kubernetes/kafka-cluster/kafka/templates/: NOTES.txt
deployment/kubernetes/kafka-connect/: Dockerfile  init.sh  kafka-mongodb-connector.yaml  kaniko-deploy.sh  kaniko-pod.yaml  mongodb-sink.properties  sink.mongodb.json  worker.properties
deployment/kubernetes/kafka/zookeeper/: Chart.yaml  README.md  values.yaml
deployment/kubernetes/kaniko/: kaniko-deploy.sh  kaniko-pod.yaml
deployment/kubernetes/kubernetes-dashboard/: README.md  recommended.yaml
deployment/kubernetes/mongodb/: persistant-volume.yml  pvc.yml  service.yml  setup_mongo.sh  statefulset.yaml
frontend/: cameraMap.json  consumer2.js  consumer_aws.js  consumer_aws2.js  package-lock.json  package.json
frontend/Genetec_kafka_1/: package-lock.json  package.json
frontend/Genetec_kafka_1/src/: App.css  App.jsx  App2.jsx  config.js  main.jsx
frontend/genetec_UI/: package-lock.json  package.json
frontend/genetec_UI/src/: App.jsx  index.css
frontend/genetec_UI/src/Components/: CameraList.jsx  InputCamera.jsx
src/: CMakeLists.txt  db.hpp  main.cpp  preprocess.hpp
src/Subscriber/: CMakeLists.txt  kafka_consumer  kafka_subscriber.cpp  tmp.cpp
